force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/DNBConnect__D_B_Connect_Company_Profile__c.object-meta.xml
<CustomObject>
    <description>Holds all D&amp;B data fields for the matched company record</description>
    <label>D&amp;B Connect Company Profile</label>
    <nameField>
        <label>D&amp;B Connect Company Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Connect Company Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>