force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/DNBConnect__DUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__DUNSNumber__c</fullName>
    <description>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
    <externalId>true</externalId>
    <inlineHelpText>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
    <label>D-U-N-S Number</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>