force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/DNBConnect__ISO_Alpha_2_Char_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__ISO_Alpha_2_Char_Country_Code__c</fullName>
    <description>The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country in which the entity is located.</description>
    <inlineHelpText>The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country in which the entity is located.</inlineHelpText>
    <label>ISO Alpha 2 Char Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>