force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/DNBConnect__PrimName__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__PrimName__c</fullName>
    <description>The single name by which the entity is primarily known or identified.</description>
    <inlineHelpText>The single name by which the entity is primarily known or identified.</inlineHelpText>
    <label>Primary Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>